--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -7,6 +7,7 @@ h1 {
 
 h2 {
     font-family: Verdana;
+    font-size: 50;
     color: #FFFFFF;
     font-weight: 400;
     text-align: center;
@@ -14,6 +15,7 @@ h2 {
 
 p {
     font-family: sans-serif;
+    font-size: 35;
     text-align: center;
     font-weight: 800;
     color: #4cc530;
@@ -29,7 +31,7 @@ body {
 }
 
 img {
-    height: 150px;
+    height: 700px;
 }
 
 img.rounded {
