--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -7,7 +7,7 @@ h1 {
 
 h2 {
     font-family: Verdana;
-    font-size: 5000;
+    font-size: 50;
     color: #FFFFFF;
     font-weight: 400;
     text-align: center;
@@ -15,10 +15,10 @@ h2 {
 
 p {
     font-family: sans-serif;
-    font-size: 350;
+    font-size: 35;
     text-align: center;
     font-weight: 800;
-    color: #ff0000;
+    color: #4cc530;
 }
 
 body {
