--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -8,7 +8,7 @@ h1 {
 h2 {
     font-family: Verdana;
     font-size: 50;
-    color: #FFFFFF;
+    color: #FF0000;
     font-weight: 400;
     text-align: center;
 }
