--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -35,6 +35,7 @@ div.sidenav {
     height: 100%;
     width: 0;
     position: fixed;
+    z-index: 0;
     top: 0;
     left: 0;
     background-color: #363636;
