--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,11 @@ body {
     background-color: #232324;
 }
 
+audio {
+    z-index: -1;
+    position: relative;
+}
+
 .mainheader {
     position: fixed;
     border-top: 5px solid #232324;
