Added embedded links to mobile music page

--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -31,6 +31,20 @@ audio {
     position: relative;
 }
 
+iframe {
+    border: none;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    height: inherit;
+    background-color: #363636;
+    border-radius: 10px;
+    margin-bottom: 25vh;
+    height: 500px;
+    padding: 7px;
+}
+
 .link {
     text-decoration: none;
     color: inherit;
