--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -35,6 +35,13 @@ audio {
     color: inherit;
 }
 
+table.gallery {
+    border-radius: 40px;
+    padding: 40px;
+    background-color: #6d6c6c;
+    box-shadow: 0 0 70px #6d6c6c;
+}
+
 div.sidenav {
     height: 100%;
     width: 0;
