--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,13 @@ audio {
     position: relative;
 }
 
+button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 .mainheader {
     position: fixed;
     border-top: 5px solid #232324;
@@ -49,6 +56,27 @@ table.gallery {
     padding: 10px;
     background-color: #6d6c6c;
     box-shadow: 0 0 50px #6d6c6c;
+}
+
+div.introbox {
+    position: fixed;
+    padding-top: 40vh;
+    text-align: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #232324;
+    opacity: 1.0;
+    z-index: 6;
+    transition-property: opacity background-color;
+    transition-duration: 1s;
+}
+
+div.introbox.cleared {
+    opacity: 0.0;
+    background-color: transparent;
+    visibility: hidden;
 }
 
 img {
