--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -30,6 +30,13 @@ audio {
     position: relative;
 }
 
+button {
+    background-color: transparent;
+    padding: 0;
+    border: none;
+    margin: 0;
+}
+
 .link {
     text-decoration: none;
     color: inherit;
@@ -40,6 +47,27 @@ table.gallery {
     padding: 40px;
     background-color: #6d6c6c;
     box-shadow: 0 0 70px #6d6c6c;
+}
+
+div.introbox {
+    position: fixed;
+    padding-top: 10vh;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top: 0;
+    left: 0;
+    background-color: #232324;
+    z-index: 6;
+    transition-property: opacity background-color;
+    transition-duration: 1s;
+    opacity: 1.0;
+}
+
+div.introbox.cleared {
+    opacity: 0.0;
+    background-color: transparent;
+    visibility: hidden;
 }
 
 div.sidenav {
