--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,6 +21,8 @@ p {
 
 body {
     background-color: #232324;
+    transition-property: opacity;
+    transition-duration: 0.5s;
 }
 
 audio {
@@ -33,17 +35,20 @@ button {
     border: none;
     padding: 0;
     margin: 0;
+    width: 100%;
 }
 
 .mainheader {
     position: fixed;
+    top: 0;
+    left: 0.25vw;
     border-top: 5px solid #232324;
     border-bottom: none;
     border-right: none;
     border-left: none;
     top: 0;
     z-index: 5;
-    width: 99%;
+    width: 98vw;
 }
 
 .link {
