--- a/mobile-stylesheet.css
+++ b/mobile-stylesheet.css
@@ -29,7 +29,10 @@ body {
 }
 
 audio {
-    position: relative;
+    transform: scale(2, 2);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 button {
@@ -133,6 +136,12 @@ img.rounded {
     width: 300px;
 }
 
+img.album-cover {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 100px;
+}
+
 th.link {
     transition-property: background-color;
     transition-duration: 1s;
@@ -140,6 +149,11 @@ th.link {
 
 th.link:hover {
     background-color: #8b8888;
+}
+
+th.album-title {
+    border-top: #ffffff solid 10px;
+    padding-top: 200px;
 }
 
 .fadein {
